# models/login.go
@@ -15,23 +15,27 @@ type EmailLoginReq struct {
 	Source int `json:"source"`
 	// Email 邮件地址
 	Email string `json:"email"`
-	// Password 密码，服务端不保存密码的明文值，请在提交前进行 MD5 哈希
+	// Password 密码，长度至少为6位
 	Password string `json:"password"`
+	// ClientID OAUTH2 Client ID
+	ClientID string `json:"client_id"`
 }
 
 func (p *EmailLoginReq) Validate() error {
 	return validation.ValidateStruct(
 		p,
 		validation.Field(&p.Email,
-			validation.Required.Error(`请输入邮件地址`),
-			is.Email.Error("邮件地址格式不正确"),
+			validation.Required.Error(`"email" is required`),
+			is.Email.Error(`"email" is not validate`),
 		),
 		validation.Field(&p.Password,
 			validation.Required.Error(`"password" is required`),
-			validation.RuneLength(32, 32).Error(`the length of "password" is incorrect`)),
+			validation.RuneLength(6, 50).Error(`"password" length must in 6-50 characters`)),
 		validation.Field(&p.Source,
-			validation.Required.Error(`请输入手机号或邮件地址`),
-			validation.In(SourceAndroid, SourceiOS, SourceWeb).Error("来源不在允许范围内")),
+			validation.Required.Error(`"source" is required`),
+			validation.In(SourceAndroid, SourceiOS, SourceWeb).Error(`"source" is not validate`)),
+		validation.Field(&p.ClientID,
+			validation.Required.Error(`"client_id" is required`)),
 	)
 }
 
@@ -44,37 +48,50 @@ type MobileLoginReq struct {
 	Mobile string `json:"mobile"`
 	// Prefix 电话号码前缀，例如86
 	Prefix string `json:"prefix"`
-	// Password 密码，服务端不保存密码的明文值，请在提交前进行 MD5 哈希
+	// Password 密码
 	Password string `json:"password"`
+	// ClientID
+	ClientID string `json:"client_id"`
 }
 
 func (p *MobileLoginReq) Validate() error {
 	return validation.ValidateStruct(
 		p,
 		validation.Field(&p.Mobile,
-			validation.Required.Error(`请输入手机号码`),
+			validation.Required.Error(`"mobile" is required`),
 			ValidateMobile(p.Prefix),
 		),
 		validation.Field(&p.Prefix,
-			validation.Required.Error(`请选择国家区号`),
+			validation.Required.Error(`"prefix" is required`),
 		),
 		validation.Field(&p.Password,
-			validation.Required.Error(`"password" is required`),
-			validation.RuneLength(32, 32).Error(`the length of "password" is incorrect`)),
+			validation.Required.Error(`"password" password is required`),
+			validation.RuneLength(6, 50).Error(`"password" length must in 6-50 characters`)),
 		validation.Field(&p.Source,
-			validation.Required.Error(`请输入手机号或邮件地址`),
-			validation.In(SourceAndroid, SourceiOS, SourceWeb).Error("来源不在允许范围内")),
+			validation.Required.Error(`"Source" is required`),
+			validation.In(SourceAndroid, SourceiOS, SourceWeb).Error(`"source" is not validate`)),
+		validation.Field(&p.ClientID, validation.Required.Error(`"client_id" is required`)),
 	)
 }
 
 // 登录返回结果
 // swagger:model
 type LoginResult struct {
+	// 用户ID
+	AccountID int64 `json:"account_id,string" swaggertype:"string"`
 	// 用户角色，用于客户端权限管理
 	Role string `json:"role"`
-	// Token JWT Token， 请在 HTTP 请求头中添加
+	// Access Token， 请在 HTTP 请求头中添加
 	// 例子： Authorization: Bearer  TJVA95OrM7E20RMHrHDcEfxjoYZgeFONFh7HgQ
-	Token string `json:"token"`
+	AccessToken string `json:"access_token"`
+	// 有效期 秒为单位
+	ExpiresIn int `json:"expires_in"`
+	// Token 类型，默认为 Bearer
+	TokenType string `json:"token_type"`
+	// Scope 暂不使用
+	Scope string `json:"scope"`
+	// Refresh Token 暂不使用
+	RefreshToken string `json:"refresh_token,omitempty"`
 }
 
 func ValidateMobile(prefix string) *ValidateIdentityRule {
@@ -96,11 +113,11 @@ func (p *ValidateMobileRule) Validate(v interface{}) error {
 
 	if p.Prefix == "86" {
 		if !chinaRegex.MatchString(mobile) {
-			return berr.Errorf("手机号码不正确")
+			return berr.Errorf(`"mobile" format is not validate`)
 		}
 	} else { // China
 		if !otherRegex.MatchString(mobile) {
-			return berr.Errorf("手机号码不正确")
+			return berr.Errorf(`"mobile" format is not validate`)
 		}
 	} // Other Country
 
